I fixed my logout button visibility

--- a/assets/css/nature.css
+++ b/assets/css/nature.css
@@ -147,6 +147,7 @@ footer{
     margin-left: -4em;
     background-color: white;
     padding: 10px 20px;
+    visibility: collapse;
     z-index: -1;
 }
 
